crates/macro_tests/tests/fail/references/non-proxy-reference.stderr
error[E0277]: the trait bound `&str: FromLua<'_>` is not satisfied
 --> tests/fail/references/non-proxy-reference.rs:4:10
  |
4 | #[derive(LuaProxy, Reflect, Clone)]
  |          ^^^^^^^^ the trait `FromLua<'_>` is not implemented for `&str`, which is required by `&str: FromLuaMulti<'lua>`
  |
  = help: the trait `FromLua<'_>` is implemented for `std::string::String`
  = help: for that trait implementation, expected `std::string::String`, found `&str`
  = note: required for `&str` to implement `FromLuaMulti<'lua>`
note: required by a bound in `bevy_mod_scripting_lua::tealr::mlu::TealDataMethods::add_function`
 --> $CARGO/tealr-0.9.1/src/mlu/teal_data_methods.rs
  |
  |     fn add_function<S, A, R, F>(&mut self, name: &S, function: F)
  |        ------------ required by a bound in this associated function
...
  |         A: FromLuaMulti<'lua> + TealMultiValue,
  |            ^^^^^^^^^^^^^^^^^^ required by this bound in `TealDataMethods::add_function`
  = note: this error originates in the derive macro `LuaProxy` (in Nightly builds, run with -Z macro-backtrace for more info)
